# Core

./: .gitignore  CMakeLists.txt  docker-compile.bat  readme.md  vscode.bat
Config/: Main.lua
Config/Common/: Bootstrap.lua  FastConfig.lua
Config/Enviroment/dev/: BaseConfig.lua
Config/Enviroment/docker-dev/: BaseConfig.lua  log.properties
Config/Enviroment/docker-local/: BaseConfig.lua  log.properties
Config/Enviroment/local/: BaseConfig.lua
Config/Enviroment/online/: BaseConfig.lua  log.properties
Config/Enviroment/online2/: BaseConfig.lua
Config/Enviroment/temporay/: BaseConfig.lua
Config/Instance/: dispatcher0.lua  dispatcher1.lua  dispatcher2.lua  dispatcher3.lua  manager.lua  robot.lua
Source/Cxx/: CMakeLists.txt  compile.bat
Source/Cxx/Base/: Process.cpp  Process.h  Service.cpp  log.hpp
Source/Cxx/Libs/: lspecialbase64.c  lsystem.cpp  pb.c
Source/Cxx/Libs/LuaIntf/: LuaIntf.h
Source/Cxx/Libs/lrapidjson/: Document.cpp  Schema.cpp  luax.hpp  rapidjson.cpp  values.hpp
Source/Cxx/Libs/pbc/: pbc.h
Source/Cxx/Libs/pbc/binding/lua/: pbc-lua.c
Source/Cxx/Libs/pbc/src/: array.c  array.h  bootstrap.c  bootstrap.h  context.c  decode.c  pattern.h  proto.c  proto.h  register.c  rmessage.c  wmessage.c
Source/Cxx/Libs/tolua/: tolua_fix.c
Source/Cxx/Server/: Server.cpp
Source/Cxx/Service/: DatabaseIntegratedService.hpp  MainService.hpp  Mysql.cpp  Mysql.h  Packet.h  Redis.cpp  Redis.h  RedisService.cpp  Session.h  TCPConnection.cpp  TCPConnection.h  TCPServer.cpp  config.h  logger_service.h  redis_service.hpp
Source/Cxx/lime/base/: message.hpp  module.hpp  process.hpp  service.hpp  service_queue.hpp  singleton.hpp
Source/Cxx/lime/core/: message.hpp  module.hpp  process.hpp  service.hpp  thread.hpp
Source/Idl/: pb.bat  pb.py  编译proto.bat
Source/Idl/Protobuf/: Account.proto  ActivityMessage.proto  AdMessage.proto  AliceinWonderland.proto  BuyLossMessage.proto  Character.proto  ChineseNewYear.proto  Client.proto  ClubInfo.proto  Common.proto  CommunicationMessage.proto  CustomerService.proto  DailyTaskMessage.proto  DailyWheel.proto  DbPlayer.proto  DistributorMessage.proto  FeverCardMessage.proto  ForbiddenCity.proto  FriendMessage.proto  FriendPasserMessage.proto  GameInfo.proto  HalloweenNight.proto  JackpotMessage.proto  LegendsofOlympus.proto  LevelUpBoxData.proto  LobbyBonusV2Base.proto  LoginReward.proto  LoginRewardMessage.proto  LuxuryLife.proto  NewLoginAwardMessage.proto  Notice.proto  OpenSesame.proto  PbGenLua.bat  Player.proto  PlayerMailMessage.proto  PopUpMessage.proto  Prop.proto  PurrfectPets.proto  RankMessage.proto  RateUsMessage.proto  (+47 more)
Source/Idl/Tolua/: BackstageService.pkg  CacheIntegratedService.pkg  DatabaseIntegratedService.pkg  DispatcherService.pkg  LoggerService.pkg  ManagerClientService.pkg  ManagerService.pkg  tolua_convert.py
Source/Lua/: luajwt.lua  protobuf.lua  protobuf_pb_51.lua  protobuf_pb_53.lua
Source/Lua/Base/: Action.lua  CacheDefine.lua  Container.lua  EventCenter.lua  HashCache.lua  HeartBeat.lua  Logger.lua  LuaPacket.lua  LuaService.lua  LuaSession.lua  Operative.lua  Path.lua  PlayerSession.lua  Protocol.lua  Spark.lua  TableCache.lua  TableDefine.lua  Task.lua
Source/Lua/Common/: AccountVersionCal.lua  ActionType.lua  ActivityCal.lua  ActivityDefine.lua  BoosterCal.lua  BroadcastType.lua  Channel.lua  ClimbSlideCal.lua  ClubConsts.lua  Common.lua  CommonCal.lua  ConstValueType.lua  DailyMissionsCal.lua  DailyMissionsState.lua  DbCommon.lua  Event.lua  FastConfig.lua  FeverCardCal.lua  FeverQuestCal.lua  FrdCal.lua  GameConst.lua  GameStatusCal.lua  GameStatusDefine.lua  GameType.lua  GenOperativeConfig.lua  GlobalState.lua  JackpotHelper.lua  LineNum.lua  LobbyBonusV2RedisHelper.lua  LuckyCal.lua  LuckyMode.lua  LuckyModeFacade.lua  LuckyModeForceWin.lua  LuckyModeLucky.lua  LuckyModeNormal.lua  LuckyModeUnlucky.lua  LuckyType.lua  MailDAL.lua  MailType.lua  NewLoginAwardCal.lua  (+50 more)
Source/Lua/Config/: ServerConfig.lua
Source/Lua/Drive/: Backstage.lua  Dispatcher.lua  Manager.lua
Source/Lua/Module/: Account.lua  Activity.lua  Ad.lua  BankruptProtect.lua  Booster.lua  BuyLoss.lua  ClimbSlide.lua  ClubTimedTask.lua  Command.lua  Communication.lua  CustomerService.lua  CustomerServicePasser.lua  DailyMissions.lua  DailyTask.lua  DailyWheel.lua  Distributor.lua  FeverCard.lua  FeverQuest.lua  Friend.lua  Mail.lua  (+139 more)
Win32/: ServerWin32.sln
Win32/lib/: libboost_chrono-vc140-mt-gd-1_60.lib  libboost_date_time-vc140-mt-gd-1_60.lib  libboost_system-vc140-mt-gd-1_60.lib  libboost_thread-vc140-mt-gd-1_60.lib  libuv.lib  lua51.lib  luajit.lib  rabbitmq.lib  tolua++.lib
Win32/project/: ServerWin32.vcxproj  ServerWin32.vcxproj.filters
ants/: executable.hpp  shared_library.h
ants/core/: configuration.hpp  error.hpp  headers.h  message.hpp  module.hpp  process.hpp  queue.hpp  service.hpp  singleton.hpp  thread.hpp  util.hpp
ants/def/: context.h  error.h  event.h  export.h  export_helper.h  functions.h  import.h  import_helper.h
ants/detail/: queue.hpp  singleton.hpp  utility.hpp
ants/interface/: context.h  error.h  event.h  export.h  export_helper.h  import.h  import_helper.h  message.h  param.h
ants/kernel/: cluster.hpp  configuration.hpp  module.hpp  process.hpp  queue.hpp  service.hpp  thread.hpp
cmake/: compile.cmake  compiler-template-1.cmake  compiler.cmake  compiler_c99.cmake  compiler_cxx17.cmake  compiler_status.cmake  linker_MD.cmake  linker_MT.cmake  os.cmake  status.cmake  vcpkg.cmake
lime/core/: headers.h  process.hpp  queue.hpp  service.hpp  singleton.hpp  thread.hpp
sbin/: docker-compile.bat  docker-dispatcher.bat  docker-manager.bat  docker-robot.bat  docker-run-all.bat  docker-run-base.bat  docker-schedule.bat  docker-server.bat  docker-stop-all.bat  dockerfile  export-dll-symbol.bat  vscode.bat  win32-dispatcher.bat  win32-manager.bat  win32-robot.bat  win32-run-all.bat  win32-run-base.bat  win32-schedule.bat
server/: server.cpp
src/bootstrap/: CMakeLists.txt  boostrap.c
src/server/: CMakeLists.txt  server.cpp
src/stability_test/: CMakeLists.txt  stability_test.c
(+972 files in other folders)
